Fix header alignment

--- a/src/App.css
+++ b/src/App.css
@@ -9,15 +9,17 @@ body {
 /* Header Styles */
 .header {
   position: fixed;
-  top: 0px;
+  top: 0;
+  left: 0;
   display: flex;
-  justify-content:space-between; /*can change para qie los buttons se vena mejor*/
+  justify-content: space-between;
   align-items: center;
   background-color: #1a1a2e;
   padding: 15px 20px;
-  width: 100%;
+  width: calc(100% - 40px); /* Adjust for padding */
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  overflow-x:auto;
+  overflow-x: auto;
+  z-index: 1000;
 }
 
 /* Logo Styling */
@@ -71,13 +73,11 @@ button {
 
 /* Login/Register Section */
 .login {
-  padding-right: 39px;
   display: flex;
   gap: 10px;
   max-width: 100%;
   flex-wrap: wrap;
 }
-
 
 .left-menu {
   display: flex;
@@ -111,7 +111,7 @@ button {
   pointer-events: none;
 }
 
-.category{
+.category {
   background-color: #16213e;
   color: white;
   padding: 10px 15px;
@@ -121,7 +121,7 @@ button {
   text-align: left;
 }
 
-.new-category{
+.new-category {
   align-items: center;
   background-color: #16213e;
   color: white;
@@ -130,56 +130,15 @@ button {
   cursor: pointer;
   border-radius: 5px;
   text-align: left;
-  
 }
+
 .dropdown {
   position: relative;
   display: block;
   margin-bottom: 10px;
 }
 
-/* Dropdown Menu 
-
-.dropdown-button {
-  background-color: #16213e;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-  text-align: left;
-}
-
-.dropdown-button:hover {
-  background-color: #0f3460;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #ffffff;
-  min-width: 160px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  background-color: #f1f1f1;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-*/
-
-.table-area{
+.table-area {
   position: fixed;
   top: 65px;
   left: 95px;
@@ -190,29 +149,25 @@ button {
   background-color: white;
   transition: left 0.3s ease-in-out;
   z-index: 1;
-
 }
 
 .table-area.full-width {
   left: 0;
 }
 
-table{
-  font-family:Verdana, Geneva, Tahoma, sans-serif ;
+table {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   width: 100%;
   border-collapse: collapse;
   color: black;
 }
 
-td, th{
+td, th {
   border: 1px solid gray;
   text-align: center;
   padding: 8px;
-
 }
 
-tr:nth-child(even){
+tr:nth-child(even) {
   background-color: gray;
 }
-
-
